tests/snapshots/tect-screen__create-repo-remote.snap
---
source: src/screen_tests.rs
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 32 },
    content: [
        "Create this repo on Github now?                                                 ",
        "  Yes                                                                           ",
        "> No                                                                            ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "enter confirms                                                                  ",
    ],
    styles: [
        x: 0, y: 0, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: BOLD,
        x: 31, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 2, fg: Rgb(238, 111, 248), bg: Reset, underline: Reset, modifier: BOLD,
        x: 0, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 31, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 14, y: 31, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
