tests/snapshots/tect-screen__create-repo-review.snap
---
source: src/screen_tests.rs
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 32 },
    content: [
        "Review what will be created                                                     ",
        "  name  Example                                                                 ",
        "  provider  github.com/someone                                                  ",
        "  github repo  not created                                                      ",
        "  libraries  tectonic-modules, core                                             ",
        "  image  none                                                                   ",
        "  workflows  none                                                               ",
        "  scripts kept  Containerfile.skeleton                                          ",
        "> Create                                                                        ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "↑↓ navigate • ⏎  select • Esc cancel                                            ",
    ],
    styles: [
        x: 0, y: 0, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: BOLD,
        x: 27, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 8, fg: Rgb(238, 111, 248), bg: Reset, underline: Reset, modifier: BOLD,
        x: 0, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 31, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 36, y: 31, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
