tests/snapshots/tect-screen__profile-picker.snap
---
source: src/screen_tests.rs
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 32 },
    content: [
        "Which profile?                                                                  ",
        "> standard  Standard System Security Profile for Fedora                         ",
        "  ospp  Protection Profile for General Purpose Operating Systems                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "enter confirms                                                                  ",
    ],
    styles: [
        x: 0, y: 0, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: BOLD,
        x: 14, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Rgb(238, 111, 248), bg: Reset, underline: Reset, modifier: BOLD,
        x: 12, y: 1, fg: Rgb(238, 111, 248), bg: Reset, underline: Reset, modifier: BOLD | DIM,
        x: 55, y: 1, fg: Rgb(238, 111, 248), bg: Reset, underline: Reset, modifier: BOLD,
        x: 0, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 64, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 31, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 14, y: 31, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
