tests/snapshots/tect-screen__workflow-picker.snap
---
source: src/screen_tests.rs
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 32 },
    content: [
        "Which workflows?                                                                ",
        "> [x] build  builds, scans, signs and publishes every image                     ",
        "  [ ] build-disk  needs a fedora or rhel image                                  ",
        "  [x] base-sig-probe  measures what each base signs and ships, and fixes it     ",
        "  [x] cleanup-registry  prunes old versions of the images off the registry      ",
        "  [ ] kernel-freshness  needs a module taking a KERNEL arg                      ",
        "  [x] smoke-test  installs the image to a disk and boots it under qemu          ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "space toggles                                                                   ",
    ],
    styles: [
        x: 0, y: 0, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: BOLD,
        x: 16, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Rgb(238, 111, 248), bg: Reset, underline: Reset, modifier: BOLD,
        x: 13, y: 1, fg: Rgb(238, 111, 248), bg: Reset, underline: Reset, modifier: BOLD | DIM,
        x: 59, y: 1, fg: Rgb(238, 111, 248), bg: Reset, underline: Reset, modifier: BOLD,
        x: 0, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 16, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 46, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 22, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 75, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 74, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 22, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 58, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 70, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 31, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 13, y: 31, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
